--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com
-Twitter: @rich_clark
-*/
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -145,3 +138,20 @@ input, select {
 /* Site Wide Styles, eg home, body */
 * {
   box-sizing: border-box; }
+
+/* The Nav Object, inspired by Harry Roberts */
+/* http://csswizardry.com/2011/09/the-nav-abstraction */
+.main-navigation {
+  list-style: none;
+  margin-left: 0; }
+  .main-navigation > li,
+  .main-navigation > li > a {
+    display: inline-block;
+    *display: inline;
+    zoom: 1; }
+
+.main-navigation {
+  width: 100%;
+  background: #eee; }
+  .main-navigation a {
+    padding: 5px 10px; }
