--- a/sass/common/_reset.scss
+++ b/sass/common/_reset.scss
@@ -1,10 +1,9 @@
-/*
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com
-Twitter: @rich_clark
-*/
+// html5doctor.com Reset Stylesheet
+// v1.6.1
+// Last Updated: 2010-09-17
+// Author: Richard Clark - http://richclarkdesign.com
+// Twitter: @rich_clark
+
 
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
