--- a/sass/objects/_nav-object.scss
+++ b/sass/objects/_nav-object.scss
@@ -1,12 +1,37 @@
+/* The Nav Object, inspired by Harry Roberts */
+/* http://csswizardry.com/2011/09/the-nav-abstraction */
+
 %nav{
     list-style:none;
     margin-left:0;
-    @extend .cf;
+    @extend .clearfix;
 
     > li,
-        > li > a{
-            display:inline-block;
-           *display:inline;
-            zoom:1;
-        }
+    > li > a{
+        display:inline-block;
+        *display:inline;
+        zoom:1;
+    }
 }
+
+%main-nav{
+    width:100%;
+    background:#eee;
+    a{
+        padding:5px 10px;
+    }
+}
+
+%breadcrumb {
+    li:before{
+        content:"» "
+    }
+    li:first-child:before{
+        content:normal;
+    }
+}
+
+%centered {
+    text-align: center;
+}
+
