--- a/sass/common/_placeholder.scss
+++ b/sass/common/_placeholder.scss
@@ -1,4 +1,7 @@
-// Offscreen text
+// Placeholder Helper
+/* $TODO: split in separate files? */
+
+/* Offscreen text */
 // http://css-tricks.com/redesigning-with-sass/
 %linkTextOffscreen{
     text-indent: -9999px;
