--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,9 +4,17 @@
 @import "common/mixins";
 @import "common/placeholder";
 
+@import "site/webfont";
 @import "site/variables";
 @import "site/site";
+@import "site/typography";
+@import "site/elements";
+@import "site/links";
+@import "site/media-queries";
 
 @import "objects/nav-object";
+@import "objects/media-object";
+@import "objects/pagination-object";
 
+/* YOUR STYLES HERE */
 @import "your-style";
