--- a/sass/common/_clearfix.scss
+++ b/sass/common/_clearfix.scss
@@ -1,3 +1,7 @@
+/* $CLEARFIX */
+/* File: "common/clearfix.scss" */
+// http://nicolasgallagher.com/micro-clearfix-hack/
+
 %clearfix {
     overflow: none;
     *zoom: 1;
