--- a/sass/common/_mixins.scss
+++ b/sass/common/_mixins.scss
@@ -1,9 +1,7 @@
-// Border-Box, use content-box as default
-@mixin border-box {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
+// Mixins
+// /* File: "common/mixins.scss" */
+// Should be visible in output css
+
 
 // Vendorize CSS Properties - eg.: vendorize(border-box, 10px);
 @mixin vendorize($property, $value) {
@@ -12,6 +10,11 @@
     -ms-#{$property}: $value;
     -o-#{$property}: $value;
     #{$property}: $value;
+}
+
+// Border-Box, use content-box as default
+@mixin border-box($box-type: border-box) {
+    @include vendorize(box-sizing, $box-type)
 }
 
 // Emboss Elements
@@ -31,5 +34,52 @@
     }
 }
 
+// REM FONT SIZE
+@mixin font-size($sizeValue: 1.6){
+  font-size: ($sizeValue * 10) + px;
+  font-size: $sizeValue + rem;
+  line-height: ($sizeValue * 10) + px;
+}
+
+// Import font-face
+// use: @include font-face($name, $font-files, $eot, $weight, $style)
+// source: http://compass-style.org/reference/compass/css3/font_face/
+@mixin font-face($name, $font-files, $eot: false, $weight: false, $style: false) {
+    $iefont: unquote("#{$eot}?#iefix");
+    @font-face {
+        font-family: quote($name);
+        @if $eot {
+            src: font-url($eot);
+            $font-files: font-url($iefont) unquote("format('eot')"), $font-files; }
+        src: $font-files;
+        @if $weight {
+            font-weight: $weight; }
+        @if $style {
+            font-style: $style;  }
+    }
+}
+
+// Opacity
+@mixin opacity($opacity) {
+    @if $support-ie6 or $support-ie7 or $support-ie8 {
+        filter: unquote("progid:DXImageTransform.Microsoft.Alpha(Opacity=#{round($opacity * 100)})"); }
+    opacity: $opacity;
+}
+
+// Border Radius
+@mixin border-radius($radius: $border-radius){
+    border-radius: $radius +px;
+}
 
 
+// $TODO
+// Animation
+// Transformation
+// Border Radius
+// Box Sizing
+// box-shadow
+// inline block
+// flexbox
+// columns
+// gradient
+// Transition
