--- a/sass/state/_media-queries.scss
+++ b/sass/state/_media-queries.scss
@@ -1,4 +1,5 @@
 /* Media Queries for various screen sizes */
+// List from: http://css-tricks.com/snippets/css/media-queries-for-standard-devices/
 // Uncomment as needed
 
 // Smartphones (portrait and landscape)
