--- a/css/style.css
+++ b/css/style.css
@@ -1,387 +1,86 @@
-/* $RESET **************/
-/* File: "common/reset.scss" */
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
+/*
+Syntax error: Undefined mixin 'border-box'.
+        on line 3 of sass/base/_site.scss, in `border-box'
+        from line 3 of sass/base/_site.scss
+        from line 7 of sass/style.scss
 
-body {
-  line-height: 1; }
+1: @import "variables";
+2: @import "your-style";
+3: 
+4: // base
+5: @import "base/reset";
+6: @import "base/clearfix";
+7: @import "base/site";
+8: @import "base/elements";
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-nav ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
-
-/* $TODO change colours to suit your needs */
-ins {
-  background-color: #ff9;
-  color: #000;
-  text-decoration: none; }
-
-/* $TODO change colours to suit your needs */
-mark {
-  background-color: #ff9;
-  color: #000;
-  font-style: italic;
-  font-weight: bold; }
-
-del {
-  text-decoration: line-through; }
-
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted;
-  cursor: help; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* $TODO change border colour to suit your needs */
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #cccccc;
-  margin: 1em 0;
-  padding: 0; }
-
-input, select {
-  vertical-align: middle; }
-
-/* $CLEARFIX */
-/* File: "common/clearfix.scss" */
-.row {
-  overflow: none;
-  *zoom: 1; }
-  .row::before, .row::after {
-    content: " ";
-    display: table; }
-  .row::after {
-    clear: both; }
-
-/* GRID */
-/* File: "common/grid.scss" */
-.column, .columns {
-  float: left;
-  min-height: 1px;
-  padding: 0 15px;
-  position: relative; }
-
-.row {
-  width: 1000px;
-  max-width: 100%;
-  min-width: 768px;
-  margin: 0 auto; }
-  .row .one {
-    width: 8.33%; }
-  .row .two {
-    width: 16.66%; }
-  .row .three {
-    width: 25%; }
-  .row .four {
-    width: 33.33%; }
-  .row .five {
-    width: 41.66%; }
-  .row .six {
-    width: 50%; }
-  .row .seven {
-    width: 58.33%; }
-  .row .eight {
-    width: 66.66%; }
-  .row .nine {
-    width: 75%; }
-  .row .ten {
-    width: 83.33%; }
-  .row .eleven {
-    width: 91.66%; }
-  .row .twelve {
-    width: 100%; }
-  .row .row {
-    width: auto;
-    max-width: none;
-    min-width: 0;
-    margin: 0 -15px; }
-  .row .push-one {
-    margin-left: 8.33%; }
-  .row .push-two {
-    margin-left: 16.66%; }
-  .row .push-three {
-    margin-left: 25%; }
-  .row .push-four {
-    margin-left: 33.33%; }
-  .row .push-five {
-    margin-left: 41.66%; }
-  .row .push-six {
-    margin-left: 50%; }
-  .row .push-seven {
-    margin-left: 58.33%; }
-  .row .push-eight {
-    margin-left: 66.66%; }
-  .row .push-nine {
-    margin-left: 75%; }
-  .row .push-ten {
-    margin-left: 83.33%; }
-  .row .push-eleven {
-    margin-left: 91.66%; }
-  .row .push-twelve {
-    margin-left: 100%; }
-  .row .mobile-one {
-    width: 25%; }
-  .row .mobile-two {
-    width: 50%; }
-  .row .mobile-three {
-    width: 75%; }
-  .row .mobile-four {
-    width: 100%; }
-
-[class*="column"] + [class*="column"]:last-child {
-  float: right; }
-
-[class*="column"] + [class*="column"].end {
-  float: left; }
-
-.column .centered,
-.columns .centered {
-  float: none;
-  margin: 0 auto; }
-
-@media only screen and (max-width: 767px) {
-  .row {
-    width: auto;
-    min-width: 0; }
-
-  .column,
-  .columns {
-    width: auto !important;
-    float: none; }
-    .column:last-child,
-    .columns:last-child {
-      float: none; }
-
-  [class*="column"] + [class*="column"]:last-child {
-    float: none; } }
-/* $TODO: split in separate files? */
-/* Offscreen text */
-/* Site Wide Styles, eg home, body */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box; }
-
-html {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 62.5%; }
-
-body {
-  background: white;
-  font-size: 14px;
-  font-size: 1.4rem;
-  line-height: 14px; }
-
-h1, .alpha,
-h2, .beta,
-h3, .gamma,
-h4, .delta,
-h5, .epsilon,
-h6, .zeta {
-  font-family: Helvetica, Arial, sans-serif;
-  color: black; }
-
-h1, .alpha {
-  font-size: 26px;
-  font-size: 2.6rem;
-  line-height: 26px; }
-
-h2, .beta {
-  font-size: 24px;
-  font-size: 2.4rem;
-  line-height: 24px; }
-
-h3, .gamma {
-  font-size: 22px;
-  font-size: 2.2rem;
-  line-height: 22px; }
-
-h4, .delta {
-  font-size: 20px;
-  font-size: 2rem;
-  line-height: 20px; }
-
-h5, .epsilon {
-  font-size: 18px;
-  font-size: 1.8rem;
-  line-height: 18px; }
-
-h6, .zeta {
-  font-size: 18px;
-  font-size: 1.8rem;
-  line-height: 18px; }
-
-p {
-  font-size: 14px;
-  font-size: 1.4rem;
-  line-height: 14px; }
-
-ol {
-  list-style: decimal; }
-
-ul {
-  list-style: disc; }
-
-ol li, ul li {
-  margin-left: 20px; }
-
-p, dl, hr,
-h1, h2, h3, h4, h5, h6,
-ol, ul,
-pre, table, blockquote,
-address,
-fieldset,
-figure {
-  margin-bottom: 20px; }
-
-q {
-  quotes: "‘" "’" "“" "”"; }
-  q:before {
-    content: "‘";
-    content: open-quote; }
-  q:after {
-    content: "’";
-    content: close-quote; }
-  q q:before {
-    content: "“";
-    content: open-quote; }
-  q q:after {
-    content: "”";
-    content: close-quote; }
-
-blockquote {
-  quotes: "“" "”";
-  text-indent: -0.4em; }
-  blockquote p:before {
-    content: "“";
-    content: open-quote; }
-  blockquote p:after {
-    content: "";
-    content: no-close-quote; }
-  blockquote p:last-of-type {
-    margin-bottom: 0; }
-    blockquote p:last-of-type:after {
-      content: "”";
-      content: close-quote; }
-
-.source {
-  display: block;
-  text-indent: 0; }
-  .source:before {
-    content: "—"; }
-
-img {
-  max-width: 100%;
-  height: auto; }
-
-table {
-  width: 100%; }
-
-a {
-  text-decoration: none; }
-  a:hover, a:active, a:focus {
-    text-decoration: underline; }
-  a:active, a:focus {
-    outline: none; }
-
-/* Media Queries for various screen sizes */
-/* The Nav Object, inspired by Harry Roberts */
-/* http://csswizardry.com/2011/09/the-nav-abstraction */
-.main-navigation, .pagination {
-  list-style: none;
-  margin-left: 0; }
-  .main-navigation > li, .pagination > li,
-  .main-navigation > li > a,
-  .pagination > li > a {
-    display: inline-block;
-    *display: inline;
-    zoom: 1; }
-
-.main-navigation {
-  width: 100%;
-  background: #eee; }
-  .main-navigation a {
-    padding: 5px 10px; }
-
-/* THe Media Object */
-.mod-start-teaser {
-  margin: 10px; }
-  .mod-start-teaser > .img,
-  .mod-start-teaser > img {
-    float: left;
-    margin-right: 10px; }
-  .mod-start-teaser .img img,
-  .mod-start-teaser img {
-    display: block; }
-
-.mod-start-teaser,
-.mod-start-teaser .bd {
-  overflow: hidden;
-  _overflow: visible;
-  zoom: 1; }
-
-/* $PAGINATION Module */
-/* creates a horizontal pagination module, use following pattern */
-.pagination {
-  text-align: center; }
-  .pagination > li {
-    padding: 10px; }
-    .pagination > li > a {
-      padding: 10px;
-      margin: -10px; }
-
-.pagination .pagination-first a:before {
-  content: "« "; }
-
-.pagination .pagination-last a:after {
-  content: " »"; }
-
-.pagination > li {
-  background: #333333; }
-  .pagination > li.current, .pagination > li:hover {
-    background: blue; }
-  .pagination > li > a {
-    color: white; }
-
-/* YOUR STYLES HERE */
+Backtrace:
+sass/base/_site.scss:3:in `border-box'
+sass/base/_site.scss:3
+sass/style.scss:7
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:249:in `visit_mixin'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:316:in `visit_rule'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:224:in `map'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:126:in `visit_root'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:7:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/visitors/perform.rb:7:in `visit'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/tree/root_node.rb:20:in `render'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/engine.rb:315:in `_render'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/engine.rb:262:in `render'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:340:in `update_stylesheet'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:202:in `update_stylesheets'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:200:in `each'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:200:in `update_stylesheets'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:298:in `watch'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:86:in `call'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:86:in `on_change'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:95:in `initialize_adapter'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:55:in `call'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:55:in `poll'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:31:in `start'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:31:in `initialize'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:31:in `new'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/adapters/polling.rb:31:in `start'
+/var/lib/gems/1.8/gems/sass-3.2.1/vendor/listen/lib/listen/multi_listener.rb:44:in `start'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin/compiler.rb:306:in `watch'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin.rb:107:in `send'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/plugin.rb:107:in `method_missing'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/exec.rb:431:in `watch_or_update'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/exec.rb:302:in `process_result'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/exec.rb:41:in `parse'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/../lib/sass/../sass/exec.rb:21:in `parse!'
+/var/lib/gems/1.8/gems/sass-3.2.1/bin/sass:8
+/usr/local/bin/sass:19:in `load'
+/usr/local/bin/sass:19
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Undefined mixin 'border-box'.\A         on line 3 of sass/base/_site.scss, in `border-box'\A         from line 3 of sass/base/_site.scss\A         from line 7 of sass/style.scss\A \A 1: @import \"variables\";\A 2: @import \"your-style\";\A 3: \A 4: // base\A 5: @import \"base/reset\";\A 6: @import \"base/clearfix\";\A 7: @import \"base/site\";\A 8: @import \"base/elements\";"; }
