--- a/sass/base/_site.scss
+++ b/sass/base/_site.scss
@@ -5,8 +5,11 @@
 html{
     font-family: $font-main;
     font-size: $font-size;
+    // force a vertical scrollbar to prevent a jumpy page
+    overflow-y: scroll;
 }
 body{
     background: $bg-color;
     @include font-size($font-size-body);
+    line-height: $line-height +em;
 }
