--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,8 @@
 @import "module/nav-object";
 @import "module/media-object";
 @import "module/pagination-object";
+// @import "module/module-object";
+@import "module/island-object";
 
 // state
 @import "state/media-queries";
