--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -1,6 +1,6 @@
 .btn{
     @include font-size(1.4);
-    background: $btn-first;
+    background: $btn-primary;
     border-bottom: 1px solid $lightgrey;
     border: 1px solid $lightergrey;
     // box-shadow: inset 0 1px 0 rgba(255, 255, 255, .4), 0 5px 5px rgba(0, 0, 0, .2);
@@ -22,7 +22,7 @@
     &.medium { padding: 10px 15px; @include font-size(1.4); }
     &.big    { padding: 15px 30px; @include font-size(1.8); }
 
-    &.primary    { background: $btn-first; }
+    &.primary    { background: $btn-primary; }
     &.secondary  { background: $btn-second; }
     &.success    { background: $btn-success; }
     &.alert      { background: $btn-alert; }
@@ -30,5 +30,29 @@
     &.square    {  }
     &.radius    { border-radius: $border-radius +px; }
     &.pill     { border-radius: 1000px; }
+}
+
+.btn-group{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    > li{
+        float: left;
+        margin: 0 0 0 -1px;
+        &:first-child{
+            margin-left: 0;
+        }
+    }
+    &.radius{
+        >li{
+            &:first-child a{
+                border-bottom-left-radius: $border-radius +px;
+                border-top-left-radius: $border-radius +px; }
+
+            &:last-child a{
+                border-bottom-right-radius: $border-radius +px;
+                border-top-right-radius: $border-radius +px; }
+        }
+    }
 }
 
