--- a/sass/module/_nav-object.scss
+++ b/sass/module/_nav-object.scss
@@ -1,6 +1,7 @@
-/* The Nav Object, inspired by Harry Roberts */
-/* http://csswizardry.com/2011/09/the-nav-abstraction */
+/* The Nav Object */
+// http://csswizardry.com/2011/09/the-nav-abstraction
 
+// Basic Nav
 %nav{
     list-style:none;
     margin-left:0;
@@ -14,6 +15,7 @@
     }
 }
 
+// Colored Nav
 %main-nav{
     width:100%;
     background:#eee;
@@ -22,16 +24,21 @@
     }
 }
 
+// Breadcrumb
 %breadcrumb {
-    li:before{
-        content:"» "
-    }
-    li:first-child:before{
-        content:normal;
-    }
+    li:before{ content:"» " }
+    li:first-child:before{ content:normal; }
 }
 
-%centered {
-    text-align: center;
+%centered { text-align: center; }
+
+%vertical{
+    @extend %nav;
+    >li{
+        display: block;
+        border-top: 1px solid $border-color;
+        padding: ($base-margin / 2) +px;
+        margin-left: 0;
+    }
 }
 
