--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,8 @@
 // base
 @import "base/mixins";
 @import "base/reset";
+// instead of a reset you can also use normalizing
+// @import "base/normalize";
 @import "base/clearfix";
 @import "base/site";
 @import "base/elements";
