--- a/sass/base/_elements.scss
+++ b/sass/base/_elements.scss
@@ -77,6 +77,7 @@ blockquote{
 img{
     max-width:100%;
     height:auto;
+    vertical-align: middle;
 }
 
 /* Tables */
@@ -119,3 +120,13 @@ a:link {-webkit-tap-highlight-color: #fcd700;}
 ins {background-color: #fcd700; color: #000; text-decoration: none;}
 mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
 
+// Removes default fieldset style
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+textarea{
+    resize: vertical;
+}
