--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -47,6 +47,7 @@ $font-size-h3:      2.2;
 $font-size-h4:      2.0;
 $font-size-h5:      1.8;
 $font-size-h6:      1.6;
+1font-size-small:   0.9;
 
 
 // Links
