--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,8 +21,10 @@
 @import "module/nav-object";
 @import "module/media-object";
 @import "module/pagination-object";
-// @import "module/module-object";
+@import "module/module-object";
 @import "module/island-object";
+@import "module/image-grid-object";
+@import "module/thumb-text-grid-object";
 
 // state
 @import "state/media-queries";
@@ -30,3 +32,4 @@
 
 @import "your-style";
 
+um
