--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -39,7 +39,7 @@ $font-size:         62.5%;
 $font-size-body:    1.4;
 $line-height:       1.6;
 $font-main:         Helvetica, Arial, sans-serif;
-$font-heading:      inherit;
+$font-heading:      "Droid Sans", Times, Georgia; //"PT Sans", "Droid Sans"
 $font-mono:         monospace, sans-serif;
 $font-size-h1:      2.6;
 $font-size-h2:      2.4;
