--- a/sass/_your-style.scss
+++ b/sass/_your-style.scss
@@ -27,6 +27,7 @@
         .column, .columns{
             background: $lightergrey;
             border-right: 1px solid $white;
+            margin-bottom: 1px;
         }
     }
 }
