--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -38,11 +38,6 @@
     .push-eleven{ margin-left: 91.66%   }
     .push-twelve{ margin-left: 100%     }
 
-    // Mobile Grid, thank you ZURB :)
-    .mobile-one     { width:  25%; }
-    .mobile-two     { width:  50%; }
-    .mobile-three   { width:  75%; }
-    .mobile-four    { width: 100%; }
 }
 
 [class*="column"] + [class*="column"]:last-child { float: right; }
@@ -61,10 +56,23 @@
 }
 
 // Mobile View
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .row{
         width: auto;
         min-width: 0;
+        // Mobile Grid, thank you ZURB :)
+        .mobile-one     { width:  25% !important; }
+        .mobile-two     { width:  50% !important; }
+        .mobile-three   { width:  75% !important; }
+        .mobile-four    { width: 100% !important; }
+
+        .mobile-one,
+        .mobile-two,
+        .mobile-three,
+        .mobile-four{
+            float: left !important;
+            padding: 0 15px;
+        }
     }
     .column,
     .columns {
