--- a/sass/layout/_typography.scss
+++ b/sass/layout/_typography.scss
@@ -7,7 +7,8 @@ h4,.delta,
 h5,.epsilon,
 h6,.zeta{
     font-family: $font-heading;
-    color: $head-color;}
+    color: $head-color;
+    margin: 20px 0 10px;}
 
 
 h1,.alpha{
